<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tech24.anon.nallareddy.MainActivity">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_cat"
        android:orderInCategory="100"
        android:title="@string/add_cats"
        app:showAsAction="never" />

    <item
        android:id="@+id/del_cats"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/export"
        android:orderInCategory="100"
        android:title="@string/export"
        app:showAsAction="never" />



</menu>
