<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent_layout"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/card"
        android:layout_height="wrap_content"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/pro_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/title"
                android:gravity="left|center_vertical"
                android:textSize="18sp"
                android:text="@string/search_products" />

            <TextView
                android:id="@+id/pro_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_below="@+id/pro_name"
                android:paddingLeft="20sp"
                android:textStyle="italic"
                android:paddingTop="5sp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:text="@string/cat_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
            <TextView
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_below="@+id/pro_cat"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/sPriceText"
                android:textSize="15sp"
                android:text="@string/aprice"
                />
            <TextView
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/bPriceText"
                android:layout_below="@id/pro_cat"
                android:layout_toEndOf="@+id/bprice"
                android:layout_toRightOf="@+id/bprice"
                android:text="@string/sprice"
                />

            <TextView
                android:id="@+id/bprice"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textStyle="italic"
                android:layout_below="@+id/pro_cat"
                android:textColor="@color/colorAccent"
                android:layout_toRightOf="@+id/sPriceText"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/price"
                android:textSize="20sp"
                 />

            <TextView
                android:id="@+id/sprice"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textStyle="italic"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/pro_cat"
                android:layout_toRightOf="@+id/bPriceText"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/price2"
                android:textSize="20sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>